--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
           name: Build Environment
           command: |
             echo "Building m8s environment http://${M8S_BASIC_AUTH_LOGIN}:${M8S_BASIC_AUTH_PASSWORD}@${CIRCLE_BRANCH}.m8s.gcp.frega.co"
-            M8S_ENV_SITE_NAME=${CIRCLE_BRANCH} M8S_ENV_SITE_URI='http://${M8S_BASIC_AUTH_LOGIN}:${M8S_BASIC_AUTH_PASSWORD}@${CIRCLE_BRANCH}.m8s.gcp.frega.co' m8s build --git-revision=${CIRCLE_SHA1} \
+            M8S_ENV_SITE_NAME=${CIRCLE_BRANCH} M8S_ENV_SITE_URI="http://${M8S_BASIC_AUTH_LOGIN}:${M8S_BASIC_AUTH_PASSWORD}@${CIRCLE_BRANCH}.m8s.gcp.frega.co" m8s build --git-revision=${CIRCLE_SHA1} \
                       --name=${CIRCLE_BRANCH} \
                       --domains=${CIRCLE_BRANCH}.m8s.gcp.frega.co \
-                      --basic-auth-user='${M8S_BASIC_AUTH_LOGIN}' \
-                      --basic-auth-pass='${M8S_BASIC_AUTH_PASSWORD}'
+                      --basic-auth-user="{M8S_BASIC_AUTH_LOGIN}" \
+                      --basic-auth-pass="${M8S_BASIC_AUTH_PASSWORD}"
       - run:
           name: Print one-time login link
           command: m8s step ${CIRCLE_BRANCH} app "make login"
