--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             M8S_ENV_SITE_NAME=${CIRCLE_BRANCH} M8S_ENV_SITE_URI="http://${M8S_BASIC_AUTH_LOGIN}:${M8S_BASIC_AUTH_PASSWORD}@${CIRCLE_BRANCH}.m8s.gcp.frega.co" m8s build --git-revision=${CIRCLE_SHA1} \
                       --name=${CIRCLE_BRANCH} \
                       --domains=${CIRCLE_BRANCH}.m8s.gcp.frega.co \
-                      --basic-auth-user="{M8S_BASIC_AUTH_LOGIN}" \
+                      --basic-auth-user="${M8S_BASIC_AUTH_LOGIN}" \
                       --basic-auth-pass="${M8S_BASIC_AUTH_PASSWORD}"
       - run:
           name: Print one-time login link
