--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
   cypress:
     docker:
       - image: cypress/base:6
-        environment:
+      - environment:
           ## this enables colors in the output
           TERM: xterm
     steps:
