--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/coder": "^8.2",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.4",
+        "drupal/flysystem_gcs": "1.x-dev",
         "drush/drush": "~8.0|^9.0.0-beta8",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
