--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/coder": "^8.2",
+        "drupal/config_installer": "^1.5",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.4",
         "drupal/flysystem_gcs": "1.x-dev",
